--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Kwang1402 <hongquang2k4@gmail.com>"]
 readme = "README.md"
+packages = [{include = "vietnamnet_crawler"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -16,6 +17,8 @@ pandas = "^2.2.3"
 boto3 = "^1.37.4"
 requests-aws4auth = "^1.3.1"
 
+tex-corver-core = {git = "git@github.com:tex-corver/core.git"}
+tex-corver-utils = {git = "git@github.com:tex-corver/utils.git"}
 
 [build-system]
 requires = ["poetry-core"]
